# automobile_backend

./: .env  .pdm-python  Dockerfile  README.md  pyproject.toml  sonar-project.properties
src/: config.py  schemas.py  server.py  session.py
src/api/: api_routers.py
src/api/v1/: auth_refresh.py  authorization.py  car_records.py  change_user_status.py  check_access_token.py  check_version.py  create_car.py  get_tables_info.py  get_users_by_org.py  register_metadata.py  register_user.py  registration.py
src/core/: exceptions.py  logger.py  token.py
src/core/configuration/: config.py
src/core/decorators/: exception_decorators.py  log_decorators.py
src/core/security/: email.py  password.py
src/db_clients/: clients.py  config.py
src/models/: __init__.py  base_model.py  organization_models.py  user_models.py
src/services/: auth_service.py  car.py  car_records.py  check_test_conn.py  create_org_and_superuser.py  permissions_mapper.py  roles_service.py  token_refresh_service.py  user_service.py
src/utils/: code_sendler.py  jwt_utils.py  s3_loader.py  token_service.py  сheck_version.py
