[project]
name = "template"
version = "0.1.0"
description = ""
authors = [
    {name = "Nikita Savvin", email = "nikita.vsav@gmail.com"},
]
dependencies = [
    "pytest>=8.1.1",
    "tox==4.14.2",
    "pre-commit>=3.6.2",
    "pytest-cov>=4.1.0",
    "coverage-badge>=1.1.0",
    "pdm-bump>=0.7.3",
    "pydantic>=2.6.3",
    "fastapi>=0.110.0",
    "uvicorn>=0.28.0",
    "pandas>=2.2.1",
    "coverage==7.4.4",
    "environs>=14.3.0",
    "ruff>=0.12.7",
    "psycopg2-binary>=2.9.10",
    "email-validator>=2.2.0",
    "passlib>=1.7.4",
    "bcrypt>=4.3.0",
    "PyJWT>=2.10.1",
    "greenlet>=3.2.4",
    "sqlalchemy>=2.0.43",
    "asyncpg>=0.30.0",
    "cryptography>=46.0.3",
    "boto3>=1.42.12",
    "python-multipart>=0.0.21",
]
requires-python = "==3.13.*"
readme = "README.md"
license = {text = "MIT"}

[project.optional-dependencies]
test = [
    "fastapi-cprofile>=0.0.2",
]
[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"


[tool.pdm]
distribution = true

[tool.pytest.ini_options]
disable_test_id_escaping_and_forfeit_all_rights_to_community_support = true
addopts = [
    "--import-mode=importlib",
]
testpaths = [
    "tests",
]
timeout = 300
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "unit_transform",
]
pythonpath = [
    "src",
    ".",
]

[tool.ruff]

exclude = [
    "tests/",
    "*.ipynb",
    "__pycache__",
]

line-length = 120
select = [
  "F",  # pyflakes
  "I",  # isort 
]

ignore = ["E501", "F811"]  # Игнорировать длину строки и неиспользуемые функции